--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
-      color: #e2e8f0;
+      background: #ffffff;
+      color: #1a1a1a;
       padding: 2rem;
     }
     .container {
@@ -35,9 +35,10 @@
       font-weight: 700;
       margin-bottom: 0.5rem;
       letter-spacing: -0.02em;
+      color: #0f172a;
     }
     .tagline {
-      color: #94a3b8;
+      color: #64748b;
       margin-bottom: 2.5rem;
       font-size: 1.1rem;
     }
@@ -49,16 +50,16 @@
     a {
       display: block;
       padding: 1rem 1.5rem;
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      background: #f8fafc;
+      border: 1px solid #e2e8f0;
       border-radius: 8px;
-      color: #e2e8f0;
+      color: #1a1a1a;
       text-decoration: none;
       transition: all 0.2s;
     }
     a:hover {
-      background: rgba(255, 255, 255, 0.1);
-      border-color: rgba(255, 255, 255, 0.2);
+      background: #f1f5f9;
+      border-color: #cbd5e1;
       transform: translateY(-2px);
     }
     a .label {
@@ -66,21 +67,25 @@
       font-size: 1.05rem;
     }
     a .desc {
-      color: #94a3b8;
+      color: #64748b;
       font-size: 0.9rem;
       margin-top: 0.25rem;
     }
     .primary {
-      background: #3b82f6;
-      border-color: #3b82f6;
-    }
-    .primary:hover {
       background: #2563eb;
       border-color: #2563eb;
+      color: #ffffff;
+    }
+    .primary:hover {
+      background: #1d4ed8;
+      border-color: #1d4ed8;
+    }
+    .primary .desc {
+      color: rgba(255, 255, 255, 0.8);
     }
     footer {
       margin-top: 3rem;
-      color: #64748b;
+      color: #94a3b8;
       font-size: 0.85rem;
     }
     footer a {
@@ -88,11 +93,11 @@
       background: none;
       border: none;
       padding: 0;
-      color: #64748b;
+      color: #94a3b8;
       text-decoration: underline;
     }
     footer a:hover {
-      color: #94a3b8;
+      color: #64748b;
       transform: none;
     }
   </style>
