Fix primary button to match landing page blue (#0284c7)

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
       margin-top: 0.25rem;
     }
     .primary {
-      background: #2563eb;
-      border-color: #2563eb;
+      background: #0284c7;
+      border-color: #0284c7;
       color: #ffffff;
     }
     .primary:hover {
-      background: #1d4ed8;
-      border-color: #1d4ed8;
+      background: #0369a1;
+      border-color: #0369a1;
     }
     .primary .desc {
       color: rgba(255, 255, 255, 0.8);
